fix: adjust spacing in traveltag
affects: @entur/travel

BREAKING CHANGE:
traveltags no longer need the inline prop on icons

--- a/packages/travel/src/TravelTag.scss
+++ b/packages/travel/src/TravelTag.scss
@@ -2,9 +2,11 @@
 
 .eds-travel-tag {
   background-color: $colors-greys-grey20;
+  border-radius: $border-widths-small;
   color: inherit;
-  display: inline-block;
+  display: inline-flex;
   font-size: $font-sizes-medium;
+  line-height: $space-large;
   height: $space-extra-large;
   min-width: $space-extra-large;
   padding: $space-extra-small2 $space-extra-small;
@@ -12,11 +14,14 @@
   &--alert {
     padding-right: $space-small;
   }
+  &--icon-and-text > .eds-icon {
+    margin-right: $space-extra-small;
+  }
   .eds-contrast & {
     background-color: $colors-blues-blue20;
   }
-  .eds-icon {
-    font-size: $font-sizes-large;
+  > .eds-icon {
+    font-size: $font-sizes-extra-large;
   }
   &__close-button {
     appearance: none;
@@ -51,16 +56,18 @@
     width: ($space-default + $border-widths-medium);
     position: absolute;
     top: ($space-extra-large - ($space-default + $border-widths-medium))/2;
-    right: -0.5rem;
+    right: -($space-default + $border-widths-medium)/2;
     .eds-contrast {
       background: $colors-brand-blue;
     }
-    &-info-icon,
     &-exclamation-icon {
       color: $colors-validation-sky;
     }
     &-error-icon {
       color: $colors-validation-lava;
+    }
+    &-info-icon {
+      color: $colors-validation-sky;
     }
   }
 }
